--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<h3>Percentage of Grade</h3>
 				</div>
 			</div>
-			<div class="grades">
+ 			<div class="grades" id="grades">
 				<div class="row">
 					<div class="col-md-3 col-md-offset-3">
 						<div class="input-group">
@@ -206,12 +206,17 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-1 col-md-offset-5">
-	  				<button type="button" id="calc" class="btn btn-default" onclick="calculate()">Calculate</button>
-				</div>
-				<div class="col-md-1">
-	  				<button type="button" id="reset" class="btn btn-default" onclick="reset()">Reset</button>
+			<div class="buttons">
+				<div class="row">
+					<div class="col-md-2 col-md-offset-3">
+		  				<button type="button" id="add" class="btn btn-default" onclick="addGrade()">Add Grade</button>
+					</div>
+					<div class="col-md-2">
+							<button type="button" id="calc" class="btn btn-default" onclick="calculate()">Calculate</button>
+					</div>
+					<div class="col-md-2">
+		  				<button type="button" id="reset" class="btn btn-default" onclick="reset()">Reset</button>
+					</div>
 				</div>
 			</div>
 			<div class="row result">
