Fix A calculator to display final grade if all are in

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 				<div class="col-md-6 col-md-offset-3">
 					<h3>You currently have a <span id="result">0</span> on <span id="complete">0%</span> of your assignments</h3>
 
-					<h3>To get an A you need a <span id="potential">0</span> on your remaining <span id="remain">0%</span> of assignments</h3>
+					<h3 id="getA">To get an A you need a <span id="potential">0</span> on your remaining <span id="remain">0%</span> of assignments</h3>
 				</div>
 			</div>
 		</div>
