Fix grid for mobile

--- a/index.html
+++ b/index.html
@@ -29,177 +29,179 @@
 		</div>
 		<div class="container content">
 			<div class="header">
-				<div class="col-md-3 col-md-offset-3">
-					<h3>Grade</h3>
-				</div>
-				<div class="col-md-3">
-					<h3>Percentage of Grade</h3>
+				<div class="row">
+					<div class="col-md-3 col-md-offset-3 col-xs-4 col-xs-offset-2">
+						<h3>Grade</h3>
+					</div>
+					<div class="col-md-3 col-xs-4">
+						<h3>% of Grade</h3>
+					</div>
 				</div>
 			</div>
  			<div class="grades" id="grades">
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="1">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="2">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="3">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="4">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="5">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="6">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="7">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="8">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="9">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="10">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="11">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="12">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="13">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-md-offset-3">
+					<div class="col-md-3 col-md-offset-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="grade" placeholder="14">
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-4">
 						<div class="input-group">
 							<input type="text" class="percent" placeholder="">
 						</div>
